package com.mufanz.chat.ui.view.chat;

public interface IChatEvent {
}
